<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMedicineName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/text_view"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switchStatus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="5dp"
            android:paddingLeft="0dp"
            android:paddingRight="5dp"
            android:paddingStart="0dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:text="@string/amount_"
                android:textColor="#000000"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="53dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:text="@string/start_time"
                android:textColor="#000000"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="105dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:paddingTop="8dp"
                android:text="@string/amount_here"
                android:textColor="#000000"
                tools:layout_editor_absoluteX="132dp"
                tools:layout_editor_absoluteY="53dp" />

            <TextView
                android:id="@+id/txtStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.07"
                android:paddingTop="8dp"
                android:text="@string/start_time_here"
                android:textColor="#000000"
                tools:layout_editor_absoluteX="132dp"
                tools:layout_editor_absoluteY="105dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="34dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|right"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/delete" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

</LinearLayout>